fix(style): overlapping grey bar

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -40,17 +40,17 @@ $secondary: $purple;
 
 /* Ngb-Datepicker */
 .ngb-dp-day {
-  width: 4rem !important;
-  height: 4rem !important;
+  width: 3.86rem !important;
+  height: 3.86rem !important;
 }
 
 .ngb-dp-day > div {
-  width: 4rem !important;
-  height: 4rem !important;
-  line-height: 4rem !important;
+  width: 3.86rem !important;
+  height: 3.86rem !important;
+  line-height: 3.86rem !important;
 }
 
 .ngb-dp-weekday {
-  width: 4rem !important;
+  width: 3.86rem !important;
   color: $amethyst !important;
 }
